--- a/AppleWood.html
+++ b/AppleWood.html
@@ -17,17 +17,20 @@
                 <a href="About.html" class="ob">About</a>
             </div>
     </nav>
-    <img src="">
-    <h2>Title</h2>
-    <p style="position: relative; top:-3.5em">type</p>
-    <p style="position: relative; top:-4.5em;font-size: .7em;">*This project was completed while working for Creative Curiosity*</p>
-    <p></p>
+    <img src="Content/AW Bistro/Menu Mockup.jpg">
+    <h2>AppleWood Bistro</h2>
+    <p style="position: relative; top:-3.5em">Branding Design/Typography</p>
+    <p>I designed a brand for a BBQ restaurant for a personal project. I looked into who would come to eat there and how the place would look and feel. It's a mix of modern and a bit of old-fashioned charm.
+        For the logo, I made it look like a branding iron. I used simple colors like red and black, adding some wood touches. The bistro has a theme that's both modern and a bit old-fashioned, meant for everyone, young and old. It's like a blend of the latest style with a touch of the countryside, making it a cozy place for anyone who loves good BBQ.
+        </p>
     <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/AW Bistro/Logo@2x.png">
+            <img src="Content/AW Bistro/pages mockup.jpg">
         </div>
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/AW Bistro/Merch.jpg">
+            <img src="Content/AW Bistro/to go mockup.png">
         </div>
     </div>
     
