--- a/Flashback.html
+++ b/Flashback.html
@@ -17,17 +17,21 @@
                 <a href="About.html" class="ob">About</a>
             </div>
     </nav>
-    <img src="">
-    <h2>Title</h2>
-    <p style="position: relative; top:-3.5em">type</p>
-    <p style="position: relative; top:-4.5em;font-size: .7em;">*This project was completed while working for Creative Curiosity*</p>
-    <p></p>
+    <img src="Content/Time Travel/poster mockup.png">
+    <h2>Flashback Time Travel</h2>
+    <p style="position: relative; top:-3.5em">Typography/Infographics</p>
+    <p>Welcome to Flashback, where we offer a refreshing escape from the hustle and bustle of modern life. Are you seeking a reprieve from the fast-paced lifestyle? Have you ever yearned to immerse yourself in an art lesson curated by Galilao? Actually get to see Christ laying in the manger? Look no further, because Flashback is tailored just for you.
+
+        This personal project was a way for me to experience the process of branding. Despite its sci-fi nature, creating Flashback became an invigorating journey where I stretched the boundaries of my creativity.This conceptual enterprise allowed me to explore uncharted territories, pushing my limits to envision diverse timelines and design immersive experiences. Delving into this unconventional concept was a thrilling exercise that challenged traditional branding norms, inviting me to innovate and reimagine brand identity.
+        </p>
     <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/Time Travel/IMG_5336.JPG">
+            <img src="Content/Time Travel/IMG_5344.JPG">
         </div>
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/Time Travel/IMG_5342.JPG">
+            <img src="Content/Time Travel/IMG_5345.JPG">
         </div>
     </div>
     
