--- a/Rise.html
+++ b/Rise.html
@@ -17,17 +17,18 @@
                 <a href="About.html" class="ob">About</a>
             </div>
     </nav>
-    <img src="">
-    <h2>Title</h2>
-    <p style="position: relative; top:-3.5em">type</p>
-    <p style="position: relative; top:-4.5em;font-size: .7em;">*This project was completed while working for Creative Curiosity*</p>
-    <p></p>
+    <img src="Content/Rise of AI/devices mockup.jpg">
+    <h2>Rise of AI Infographics</h2>
+    <p style="position: relative; top:-3.5em">Infographics</p>
+    <p>AI is getting really big in our lives. Some folks are worried it might take their jobs because it's so new and we don't know a lot about it. I decided to look into AI to see if we should worry or if there's something good about it. I did research to find out more. Then, I made a fun way to learn about AI. I used pictures and made a special website that's easy to use. It's like a sneak peek into the future where you can play around and learn all about AI in a cool way.</p>
     <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/Rise of AI/Desktop 1 copy-100.jpg">
+            <img src="Content/Rise of AI/Desktop 1 copy 3-100.jpg">
         </div>
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/Rise of AI/Desktop 1 copy 2-100.jpg">
+            <img src="Content/Rise of AI/phone 1-100.jpg">
         </div>
     </div>
     
