--- a/Species.html
+++ b/Species.html
@@ -17,17 +17,19 @@
                 <a href="About.html" class="ob">About</a>
             </div>
     </nav>
-    <img src="">
-    <h2>Title</h2>
-    <p style="position: relative; top:-3.5em">type</p>
-    <p style="position: relative; top:-4.5em;font-size: .7em;">*This project was completed while working for Creative Curiosity*</p>
-    <p></p>
+    <img src="Content/Animal Extinction/subway mockup.png">
+    <h2>Endangered Species Infographic</h2>
+    <p style="position: relative; top:-3.5em">Infographics</p>
+    <p>I worked on creating visual graphics to raise awareness about endangered animals. To grab attention, I used soft, muted colors, highlighting crucial details in red. To keep things interesting, I designed unique graphs, aiming to prevent monotony and make the information stick in people's minds.
+        There are various causes behind animals facing extinction, many of which are because of human actions. I believe that by spreading awareness, we can make a difference. The more people know about this situation, the more they can help. It's important to showcase this issue in a way that captures attention and encourages action, and that's what I aimed to do through these visual graphics.
+        </p>
     <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/Animal Extinction/presentation mockup.png">
+            <img src="Content/Animal Extinction/v2.png">
         </div>
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/Animal Extinction/subway mockup.png">
         </div>
     </div>
     
