--- a/Teacheroes.html
+++ b/Teacheroes.html
@@ -17,17 +17,28 @@
                 <a href="About.html" class="ob">About</a>
             </div>
     </nav>
-    <img src="">
-    <h2>Title</h2>
-    <p style="position: relative; top:-3.5em">type</p>
+    <img src="Content/CFC/cfc weekly.jpg">
+    <h2>CFC Techeroes</h2>
+    <p style="position: relative; top:-3.5em">Advertising</p>
     <p style="position: relative; top:-4.5em;font-size: .7em;">*This project was completed while working for Creative Curiosity*</p>
-    <p></p>
+    <p>Champions for Children, in Jackson Hole WY, began featuring different teachers during each month of the year. The goal was to raise awareness of the amazing teachers in Jackson and to help them out with donation and volunteering.
+        I was in charge of designing the ads for each teacher. Once I cut the person out of their pictures, I could turn them into a hero. The ads included were physical flyers, social media posts and gifs. 
+        </p>
     <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/CFC/Social graphic Teacher ads.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads3.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads5.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads7.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads9.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads11.jpg">
         </div>
         <div class="picgrid2">
-            <img src="">
+            <img src="Content/CFC/Social graphic Teacher ads2.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads4.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads6.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads8.jpg">
+            <img src="Content/CFC/Social graphic Teacher ads10.jpg">
         </div>
     </div>
     
