--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,7 +17,7 @@
         </div>
     </nav>
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Portfolio</h1>
-        <div class="navgrid0">
+        <div class="navgrid0" style="padding-bottom: 100%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;">
             <!--
                 <div class="pg">
                     <a href="" style="z-index: 10;"><img src=""></a>
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="" style="z-index: 10;"><img src="Content/Kitchen packaging/DSC_0006.JPG"></a>
+                <a href="KitchenPackaging.html" style="z-index: 10;"><img src="Content/Kitchen packaging/DSC_0006.JPG"></a>
                 <div class="pgr2">
                     <h2>Kitchen Packaging</h2>
                     <h3>Package Design</h3>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="pgl">
-                <a href="" style="z-index: 10;"><img src="Content/DW/Broadway/Broadway Workshop flyers3.jpg"></a>
+                <a href="DWAds.html" style="z-index: 10;"><img src="Content/DW/Broadway/Broadway Workshop flyers3.jpg"></a>
                 <div class="pgl2">
                     <h2>Dancers' Workshop Ads</h2>
                     <h3>Advertising</h3>
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="" style="z-index: 10;"><img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg"></a>
+                <a href="JHChamber.html" style="z-index: 10;"><img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg"></a>
                 <div class="pgr2" style="grid-template-rows: 5.5em 3em 1.6em 1em;;">
                     <h2>JH Chamber Annual Report</h2>
                     <h3>Typography/Infographics</h3>
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="pgl">
-                <a href="" style="z-index: 10;"><img src="Content/Time Travel/poster mockup.png"></a>
+                <a href="Flashback.html" style="z-index: 10;"><img src="Content/Time Travel/poster mockup.png"></a>
                 <div class="pgl2">
                     <h2>Flashback Time Travel</h2>
                     <h3>Typography/Infographics</h3>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="" style="z-index: 10;"><img src="Content/CFC/cfc weekly.jpg"></a>
+                <a href="Teacheroes.html" style="z-index: 10;"><img src="Content/CFC/cfc weekly.jpg"></a>
                 <div class="pgr2">
                     <h2>CFC TeacHeroes Ads</h2>
                     <h3>Advertising</h3>
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="pgl">
-                <a href="" style="z-index: 10;"><img src="Content/Animal Extinction/subway mockup.png"></a>
+                <a href="Species.html" style="z-index: 10;"><img src="Content/Animal Extinction/subway mockup.png"></a>
                 <div class="pgl2" style="grid-template-rows: 5.5em 3em 1.6em 1em;;">
                     <h2>Endangered Species Infographic</h2>
                     <h3>Infographics</h3>
@@ -93,16 +93,16 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="" style="z-index: 10;"><img src="Content/AW Bistro/Menu Mockup.jpg"></a>
+                <a href="AppleWood.html" style="z-index: 10;"><img src="Content/AW Bistro/Menu Mockup.jpg"></a>
                 <div class="pgr2">
                     <h2>AppleWood Bistro</h2>
-                    <h3>Bradning Design/Typography</h3>
+                    <h3>Branding Design/Typography</h3>
                     <p>Adobe Illustrator, Indesign, Photoshop</p>
                     <p>2022</p>
                 </div>
             </div>
             <div class="pgl">
-                <a href="" style="z-index: 10;"><img src="Content/Rise of AI/devices mockup.jpg"></a>
+                <a href="Rise.html" style="z-index: 10;"><img src="Content/Rise of AI/devices mockup.jpg"></a>
                 <div class="pgl2">
                     <h2>Rise of AI Infographics</h2>
                     <h3>Infographics</h3>
