--- a/Flashback.html
+++ b/Flashback.html
@@ -37,9 +37,9 @@
     
     <footer class="footer">
         <div class="fg">
-            <a href=""><img style="width: 100%;" src="Content/Logo/instagram.png"></a>
-            <a href=""><img style="width: 100%;" src="Content/Logo/linked in.png"></a>
-            <a href=""><img style="width: 100%;" src="Content/Logo/behance.png"> </a>
+            <a href="https://www.instagram.com/toni.designs1155/"><img style="width: 100%;" src="Content/Logo/instagram.png"></a>
+            <a href="https://www.linkedin.com/in/tonistevens1155/"><img style="width: 100%;" src="Content/Logo/linked in.png"></a>
+            <a href="https://www.behance.net/tonistevens2"><img style="width: 100%;" src="Content/Logo/behance.png"> </a>
         </div>
     </footer>
 </body>
