--- a/Photography.html
+++ b/Photography.html
@@ -121,7 +121,7 @@
         </div>
         <div class="picgrid3">
             <p>Portraits</p>
-            <img src="Content/photography/portraits/IMG_0839.JPG">
+            <img src="Content/photography/portraits/IMG_5462.jpg">
         </div>
         <div class="picgrid3">
             <p>Portraits</p>
@@ -146,9 +146,9 @@
 </div>
     <footer class="footer">
         <div class="fg">
-            <a href=""><img src="Content/Logo/instagram.png"></a>
-            <a href=""><img src="Content/Logo/linked in.png"></a>
-            <a href=""><img src="Content/Logo/behance.png"> </a>
+            <a href="https://www.instagram.com/toni.designs1155/"><img src="Content/Logo/instagram.png"></a>
+            <a href="https://www.linkedin.com/in/tonistevens1155/"><img src="Content/Logo/linked in.png"></a>
+            <a href="https://www.behance.net/tonistevens2"><img src="Content/Logo/behance.png"> </a>
         </div>
     </footer>
 </body>
