--- a/About.html
+++ b/About.html
@@ -47,9 +47,9 @@
     
     <footer class="footer">
         <div class="fg">
-            <a href=""><img src="Content/Logo/instagram.png"></a>
-            <a href=""><img src="Content/Logo/linked in.png"></a>
-            <a href=""><img src="Content/Logo/behance.png"> </a>
+            <a href="https://www.instagram.com/toni.designs1155/"><img src="Content/Logo/instagram.png"></a>
+            <a href="https://www.linkedin.com/in/tonistevens1155/"><img src="Content/Logo/linked in.png"></a>
+            <a href="https://www.behance.net/tonistevens2"><img src="Content/Logo/behance.png"> </a>
         </div>
     </footer>
 </body>
