--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,10 @@
         <h2 style="text-align: center; margin-top: 7%;color: white;">About Me</h2>
         <div class="ag">
             <p>Hi! My name is Antonia, but you can call me Toni.<br> I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYUI where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.</p>
-            <img style="width: 100%;" src="Content/ToniPortrait.jpg" alt="Toni Stevens Portrait">
+            <div class="picgrid3">
+                <img style="width: 100%;" src="Content/ToniPortrait.jpg" alt="Toni Stevens Portrait">
+                <a href="About.html" style="position: relative;left: -5%;"><p>More</p></a>
+            </div>
         </div>
     </div>
 
@@ -119,9 +122,9 @@
 
     <footer class="footer">
         <div class="fg">
-            <a href=""><img src="Content/Logo/instagram.png"></a>
-            <a href=""><img src="Content/Logo/linked in.png"></a>
-            <a href=""><img src="Content/Logo/behance.png"> </a>
+            <a href="https://www.instagram.com/toni.designs1155/"><img src="Content/Logo/instagram.png"></a>
+            <a href="https://www.linkedin.com/in/tonistevens1155/"><img src="Content/Logo/linked in.png"></a>
+            <a href="https://www.behance.net/tonistevens2"><img src="Content/Logo/behance.png"> </a>
         </div>
     </footer>
 
