--- a/Portfolio.html
+++ b/Portfolio.html
@@ -113,9 +113,9 @@
         </div>
         <footer class="footer">
             <div class="fg" style="padding-top: 8%;padding-bottom: 0;">
-                <a href=""><img src="Content/Logo/instagram.png"></a>
-                <a href=""><img src="Content/Logo/linked in.png"></a>
-                <a href=""><img src="Content/Logo/behance.png"> </a>
+                <a href="https://www.instagram.com/toni.designs1155/"><img src="Content/Logo/instagram.png"></a>
+                <a href="https://www.linkedin.com/in/tonistevens1155/"><img src="Content/Logo/linked in.png"></a>
+                <a href="https://www.behance.net/tonistevens2"><img src="Content/Logo/behance.png"> </a>
             </div>
         </footer>
 </body>
