--- a/Index.html
+++ b/Index.html
@@ -38,15 +38,15 @@
             -->
             <div class="picgrid3">
                 <img src="Content/Cloudveil/cloudveil mockup.jpg">
-                <a href="Portfolio.html"><p>TYFS<br>Cloudveil Event</p></a>
+                <a href="Portfolio.html#cloud"><p>TYFS<br>Cloudveil Event</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/design/Advertising2.png">
-                <a href="Portfolio.html"><p>TeacHeroes</p></a>
+                <a href="Portfolio.html#teach"><p>TeacHeroes</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/Kitchen packaging/DSC_0239.JPG">
-                <a href="Portfolio.html"><p>Packaging</p></a>
+                <a href="Portfolio.html#package"><p>Packaging</p></a>
             </div>
             <!-- End of left side items -->
         </div>
@@ -54,15 +54,15 @@
             <!-- Start of right side items -->
             <div class="picgrid3">
                 <img src="Content/DW/Broadway/Broadway Workshop flyers4.jpg">
-                <a href="Portfolio.html"><p>Dancers' <br> Workshop</p></a>
+                <a href="Portfolio.html#dancers"><p>Dancers' <br> Workshop</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg">
-                <a href="Portfolio.html"><p>JH Chamber<br>Annual Report</p></a>
+                <a href="Portfolio.html#chamber"><p>JH Chamber<br>Annual Report</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/AW Bistro/to go mockup.png">
-                <a href="Portfolio.html"><p>AppleWood Branding</p></a>
+                <a href="Portfolio.html#applewood"><p>AppleWood Branding</p></a>
             </div>
             <!-- End of right side items -->
         </div>      
@@ -85,37 +85,37 @@
         <div class="picgrid2">
             <div class="picgrid3">
                 <img src="Content/photography/portraits/IMG_3170.JPG">
-                <a href="Photography.html"><p>Portraits</p></a>
+                <a href="Photography.html#portraits"><p>Portraits</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/photography/landscapes/IMG_2498.JPG">
-                <a href="Photography.html"><p>Landscapes</p></a>
+                <a href="Photography.html#landscapes"><p>Landscapes</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/photography/close up/IMG_4081.JPG">
-                <a href="Photography.html"><p>Close Ups</p></a>
+                <a href="Photography.html#close"><p>Close Ups</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/photography/sports/IMG_3104.JPG">
-                <a href="Photography.html"><p>Sports</p></a>
+                <a href="Photography.html#sport"><p>Sports</p></a>
             </div>
         </div>
         <div class="picgrid2">
             <div class="picgrid3">
                 <img src="Content/photography/close up/IMG_3968.JPG">
-                <a href="Photography.html"><p>Close Ups</p></a>
+                <a href="Photography.html#close"><p>Close Ups</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/photography/portraits/IMG_4655.JPG">
-                <a href="Photography.html"><p>Portraits</p></a>
+                <a href="Photography.html#portraits"><p>Portraits</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/photography/sports/IMG_8073.jpg">
-                <a href="Photography.html"><p>Sports</p></a>
+                <a href="Photography.html#sport"><p>Sports</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/photography/landscapes/IMG_3745.JPG">
-                <a href="Photography.html"><p>Landscapes</p></a>
+                <a href="Photography.html#landscapes"><p>Landscapes</p></a>
             </div>
         </div>
     </div>
