--- a/Photography.html
+++ b/Photography.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/Portfolio.css">
+    <link rel="icon" type="image/x-icon" href="Content/Logo/teal logo.png">
     <title>Stevens</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Photography</h1>
 
     <h2 style="padding-top: 5%;padding-bottom: 4%;text-align: center;">Landscapes</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div id="landscapes" class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
         <div class="picgrid2">
             <div class="picgrid3">
                 <p>Landscapes</p>
@@ -51,7 +52,7 @@
         </div>
     </div>
     <h2 style="padding-top: 5%;padding-bottom: 2%; text-align: center;">Sports</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div id="sport" class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
     <div class="picgrid2">
         <div class="picgrid3">
             <p>Sports</p>
@@ -82,7 +83,7 @@
     </div>
 </div>
     <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Close Ups</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div id="close" class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
     <div class="picgrid2">
         <div class="picgrid3">
             <p>Close Ups</p>
@@ -113,7 +114,7 @@
     </div>
     </div>
     <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Portraits</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div id="portraits" class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
     <div class="picgrid2">
         <div class="picgrid3">
             <p>Portraits</p>
