--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/Portfolio.css">
+    <link rel="icon" type="image/x-icon" href="Content/Logo/teal logo.png">
     <title>Stevens</title>
 </head>
 <body>
@@ -30,7 +31,7 @@
                 </div>
             -->
             <div class="pgl">
-                <a href="Cloudveil.html" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
+                <a id="cloud" href="Cloudveil.html" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
                 <div class="pgl2">
                     <h2>TYFS Cloudveil</h2>
                     <h3>Typography</h3>
@@ -39,7 +40,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="KitchenPackaging.html" style="z-index: 10;"><img src="Content/Kitchen packaging/DSC_0006.JPG"></a>
+                <a id="package" href="KitchenPackaging.html" style="z-index: 10;"><img src="Content/Kitchen packaging/DSC_0006.JPG"></a>
                 <div class="pgr2">
                     <h2>Kitchen Packaging</h2>
                     <h3>Package Design</h3>
@@ -48,7 +49,7 @@
                 </div>
             </div>
             <div class="pgl">
-                <a href="DWAds.html" style="z-index: 10;"><img src="Content/DW/Broadway/Broadway Workshop flyers3.jpg"></a>
+                <a id="dancers" href="DWAds.html" style="z-index: 10;"><img src="Content/DW/Broadway/Broadway Workshop flyers3.jpg"></a>
                 <div class="pgl2">
                     <h2>Dancers' Workshop Ads</h2>
                     <h3>Advertising</h3>
@@ -57,7 +58,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="JHChamber.html" style="z-index: 10;"><img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg"></a>
+                <a id="chamber" href="JHChamber.html" style="z-index: 10;"><img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg"></a>
                 <div class="pgr2" style="grid-template-rows: 5.5em 3em 1.6em 1em;;">
                     <h2>JH Chamber Annual Report</h2>
                     <h3>Typography/Infographics</h3>
@@ -75,7 +76,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="Teacheroes.html" style="z-index: 10;"><img src="Content/CFC/cfc weekly.jpg"></a>
+                <a id="teach" href="Teacheroes.html" style="z-index: 10;"><img src="Content/CFC/cfc weekly.jpg"></a>
                 <div class="pgr2">
                     <h2>CFC TeacHeroes Ads</h2>
                     <h3>Advertising</h3>
@@ -93,7 +94,7 @@
                 </div>
             </div>
             <div class="pgr">
-                <a href="AppleWood.html" style="z-index: 10;"><img src="Content/AW Bistro/Menu Mockup.jpg"></a>
+                <a id="applewood" href="AppleWood.html" style="z-index: 10;"><img src="Content/AW Bistro/Menu Mockup.jpg"></a>
                 <div class="pgr2">
                     <h2>AppleWood Bistro</h2>
                     <h3>Branding Design/Typography</h3>
